--- a/style.css
+++ b/style.css
@@ -149,10 +149,11 @@ div.s1 {
 
 /* END SECTION "ShortInfo" */
 /* SECTION "Drinks" */
-section.Drinks h1 {
+section.Drinks p.Drinks {
     text-align: right;
     font-size: 38px;
     background-color: #33333309;
+    font-weight: 900;
 }
 
 /* Create a Flip Card */
@@ -255,3 +256,44 @@ footer {
 }
 
 /* END FOOTER */
+
+/* PRELOADER */
+
+.lds-hourglass,
+.lds-hourglass:after {
+  box-sizing: border-box;
+}
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid currentColor;
+  border-color: currentColor transparent currentColor transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
+}
+
+
+/* END PRELOADER */
